--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,23 @@
+version: '3.1'
 
-version: '2'
 services:
-  volume:
-    image: busybox
-    container_name: wordpress-volume
-    volumes:
-      - ./db/data:/var/lib/mysql
-  db:
-    image: mysql
-    container_name: wordpress-db
-    expose:
-      - "3306"
-    environment:
-      - MYSQL_ROOT_PASSWORD=root # rootパスワードの設定
-    volumes_from:
-      - volume
-    restart: always
-    ports:
-      - "3306:3306"
-    volumes:
-      - ./db/data:/var/lib/mysql
-  app:
+
+  wordpress:
     image: wordpress
-    container_name: wordpress-app
     restart: always
     ports:
-      - "8080:80"
-    depends_on:
-      - db
+      - 8080:80
+    environment:
+      WORDPRESS_DB_HOST: db
+      WORDPRESS_DB_USER: exampleuser
+      WORDPRESS_DB_PASSWORD: examplepass
+      WORDPRESS_DB_NAME: exampledb
+
+  db:
+    image: mysql:5.7
+    restart: always
+    environment:
+      MYSQL_DATABASE: exampledb
+      MYSQL_USER: exampleuser
+      MYSQL_PASSWORD: examplepass
+      MYSQL_RANDOM_ROOT_PASSWORD: '1'
